--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "license": "MIT",
     "type": "module",
     "scripts": {
-        "test": "vitest --reporter=verbose",
+        "test": "vitest --reporter=verbose --run",
         "check": "tsc --noEmit",
         "lint": "eslint 'src/**/*.ts' --max-warnings 0 --report-unused-disable-directives",
         "update": "pnpm up --latest --interactive"
